...
    bitmap?.let {
        ZoomableContent("$path:$pageIndex", Modifier.fillMaxSize()) {
            Image(
                bitmap = it.asImageBitmap(),
                contentDescription = null,
                contentScale = ContentScale.Fit,
                modifier = Modifier.fillMaxSize().testTag("page-image"),
            )
        }
    } ?: Box(Modifier.fillMaxSize()) {
        CircularProgressIndicator(Modifier.padding(24.dp))
    }
}
...
